# Offline-AI-Knowledge-Workspace-Design

./: .gitignore  AGENTS.md  remain.md
khoji_desktop/: QA_REPORT.md  README.md  design.md  pyproject.toml
khoji_desktop/design/: 02-personas.md  03-user-journeys.md  05-design-system.md  07-ai-experience.md  15-plugin-architecture.md  16-competitive-analysis.md  17-prd.md  20-database-design.md  22-security-document.md  23-testing-strategy.md  28-hackathon-mvp-scope.md  30-repository-standards.md
khoji_desktop/docs/: index.html  script.js  style.css
khoji_desktop/src/khoji/: __init__.py  main.py
khoji_desktop/src/khoji/ai/: embeddings.py  (+2 more)
khoji_desktop/tests/: conftest.py  test_content_generator.py  test_database.py  test_embeddings.py  test_exporter.py  test_llm.py  test_main.py  test_markdown_generator.py  test_ocr.py  test_pdf_extractor.py  test_processor.py  test_theme.py  test_vector_search.py
khoji_desktop/ui and ux/: khoji_desktop_audit.md  khoji_desktop_ia_specs.md
khoji_desktop/ui and ux/animated_svg/: code.html
khoji_desktop/ui and ux/command_palette_animated/: code.html
khoji_desktop/ui and ux/command_palette_overlay/: code.html
khoji_desktop/ui and ux/home_select_ingestion/: code.html
khoji_desktop/ui and ux/khoji/: DESIGN.md
khoji_desktop/ui and ux/khoji_knowledge_engine_interface/: code.html
khoji_desktop/ui and ux/knowledge_explorer/: code.html
khoji_desktop/ui and ux/knowledge_explorer_animated/: code.html
khoji_desktop/ui and ux/pipeline_architect/: code.html
khoji_desktop/ui and ux/pipeline_architect_animated/: code.html
(+74 files in other folders)
