[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khoji"
version = "0.1.0"
description = "Khoji — Offline AI Knowledge Workspace"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "PySide6>=6.8",
    "PyMuPDF>=1.25",
    "numpy>=2.0",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.9",
    "llama-cpp-python>=0.3",
]

[project.optional-dependencies]
ocr = ["rapidocr-onnxruntime>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
khoji = "khoji.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
